--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Password generator</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app"></div>
